# calendar-email-reminder

./: .env.example  .gitignore  .sent_notifications.json  README.md  calendar_auth.py  check_status.sh  email_sender.py  main.py  pyproject.toml  setup_cron.sh
tests/: __init__.py  test_calendar_auth.py  test_email_sender.py  test_main.py
